# my_notebook_cpp

./: CMakeLists.txt  README.md  main.cpp
src/: App.cpp  App.h  Note.cpp  Note.h  NoteCollection.cpp  NoteCollection.h  NoteCollectionObserver.h  Observer.h  Subject.h  utils.h
test/: AppTest.h  NodeCollectionTest.h  NodeTest.cpp  NodeTest.h
